@@ -1,3 +1,4 @@
 name = cpan-listchanges
 [@Milla]
-installer = MakeMaker
+installer = ModuleBuild
+
